@@ -16,17 +16,17 @@
  */
 package jdplus.sts.base.core.msts.internal;
 
+import jdplus.sts.base.core.msts.MstsMapping;
+import jdplus.sts.base.core.msts.ParameterInterpreter;
+import jdplus.sts.base.core.msts.StateItem;
+import jdplus.sts.base.core.msts.VarianceInterpreter;
 import jdplus.sts.base.core.splines.SplineComponent;
 import jdplus.sts.base.core.splines.SplineData;
-import jdplus.sts.base.core.msts.StateItem;
 import jdplus.toolkit.base.api.data.DoubleSeq;
-import jdplus.sts.base.core.msts.MstsMapping;
-import jdplus.sts.base.core.msts.VarianceInterpreter;
-import java.util.Collections;
-import java.util.List;
-import jdplus.sts.base.core.msts.ParameterInterpreter;
 import jdplus.toolkit.base.core.ssf.ISsfLoading;
 import jdplus.toolkit.base.core.ssf.StateComponent;
+
+import java.util.List;
 
 /**
  *
@@ -69,7 +69,7 @@ public class SplineItem extends StateItem {
 
     @Override
     public List<ParameterInterpreter> parameters() {
-        return Collections.singletonList(v);
+        return List.of(v);
     }
 
     @Override
