@@ -16,17 +16,17 @@
  */
 package jdplus.sts.base.core.msts.internal;
 
-import jdplus.toolkit.base.api.data.DoubleSeq;
-import jdplus.sts.base.core.msts.StateItem;
 import jdplus.sts.base.core.msts.MstsMapping;
-import jdplus.toolkit.base.api.ssf.sts.SeasonalModel;
-import java.util.Collections;
-import java.util.List;
 import jdplus.sts.base.core.msts.ParameterInterpreter;
 import jdplus.sts.base.core.msts.ScaleInterpreter;
+import jdplus.sts.base.core.msts.StateItem;
+import jdplus.toolkit.base.api.data.DoubleSeq;
+import jdplus.toolkit.base.api.ssf.sts.SeasonalModel;
 import jdplus.toolkit.base.core.ssf.ISsfLoading;
 import jdplus.toolkit.base.core.ssf.StateComponent;
 import jdplus.toolkit.base.core.ssf.sts.VarSeasonalComponent;
+
+import java.util.List;
 
 /**
  *
@@ -73,7 +73,7 @@ public class VarSeasonalComponentItem extends StateItem {
 
     @Override
     public List<ParameterInterpreter> parameters() {
-        return Collections.singletonList(scale);
+        return List.of(scale);
     }
 
     @Override
